# sys-design

./: .gitignore  Makefile  README.md  __init__.py  pyproject.toml
.github/workflows/: compliance-auditability.yml  identity-and-access-plane.yml  multi-tenant-control-plane.yml  policy-governance-engine.yml
benchmark-sdks/: ADVANCED_TESTING_GUIDE.md
db_locks/: __init__.py  distributed_lock.py  optimistic_lock.py  pessimistic_lock.py
design-a-rate-limiter/: Makefile  README.md  base.py  diagram.excalidraw
design-a-rate-limiter/token-bucket/: __init__.py  limiter.py
design-a-url-shortener/: __init__.py  encoder.py  shortener.py
design-cache/cache/: __init__.py  lfu_cache.py  lru_cache.py  ttl_cache.py
design-cache/design/: reference.md
design-enterprise-solutions/: requirements.md
design-enterprise-solutions/compliance-auditability/: Makefile  README.md  requirements.txt
design-enterprise-solutions/compliance-auditability/PRD/: functional_requirements.md  nonfunctional_requirements.md
design-enterprise-solutions/compliance-auditability/__test__/: README.md  test_phase1_basics.py  test_phase2_integrity.py  test_phase3_scale.py
design-enterprise-solutions/identity-and-access-plane/: README.md  requirements.txt
design-enterprise-solutions/multi-tenant-control-plane/: README.md  requirements.txt
design-enterprise-solutions/policy-governance-engine/: requirements.txt
design-openrouter/: README.md  architecture.mermaid
design-openrouter/design/: architecture.excalidraw  architecture.mermaid  design-doc.md
(+19 files in other folders)
